# genieRedis-Lite

./: .gitignore  Cargo.toml  README.md  TODO.md
documentation/: ARCHITECTURE.MD  DECISIONS.MD  DEVLOG.MD  benchmark_tests_results.md
src/: main.rs
src/persistence/: aof.rs  mod.rs  snapshot.rs
src/protocol/: mod.rs
src/server/: mod.rs
src/storage/: mod.rs
tests/: integration_test.rs
