[package]
name = "GenieRedis-Lite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "5"                                     # Concurrent HashMap
serde = { version = "1", features = ["derive"] }  # Serialization
serde_json = "1"                                  # Persistence format
bytes = "1"                                       # Efficient byte handling
thiserror = "1"                                   # Error types
tracing = "0.1"                                     # Logging
tracing-subscriber = "0.3"
bincode = "1.3.3"

[dev-dependencies]
tokio-test = "0.4"
